ots of examples

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>demo.Application</start-class>
+        <start-class>bookmarks.rest.Application</start-class>
         <java.version>1.8</java.version>
     </properties>
     <repositories>
