--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,13 @@
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.0.0.RC2</version>
+        </dependency>    <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+            <version>1.1.0.RELEASE</version>
         </dependency>
-    </dependencies>
+
+        </dependencies>
     </dependencyManagement>
 
     <properties>
