adding application for javaee servers.

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,8 @@
 
     <packaging>pom</packaging>
     <modules>
-        <module>rest</module>
-        <module>security</module>
+        <module>web</module>
         <module>model</module>
-        <module>hateoas</module>
     </modules>
     <dependencies>
         <dependency>
