--- a/model/pom.xml
+++ b/model/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>bookmarks</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <name>bookmarks-model</name>
     <artifactId>model</artifactId>
     <dependencies>
         <dependency>
