--- a/security/pom.xml
+++ b/security/pom.xml
@@ -36,5 +36,16 @@
             <artifactId>spring-hateoas</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
 </project>
