--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
+        <module>docs</module>
         <module>rest</module>
         <module>security</module>
         <module>model</module>
